alpm-srcinfo/tests/parse_error_snapshots/unexpected_pkgname_property.snap
---
source: alpm-srcinfo/tests/parse_errors.rs
description: "pkgbase = test\n\tpkgver = 1.0.0\n\tpkgrel = 1\n\npkgname = test\n\t# validpgpkeys is not valid in the context of pkgname\n\tvalidpgpkeys = 4A0C4DFFC02E1A7ED969ED231C2358A25A10D94E\n"
expression: "format!(\"{error}\")"
---
File parsing error:
error: invalid package property keyword
  | 
6 |  # validpgpkeys is not valid in the context of pkgname
7 |  validpgpkeys = 4A0C4DFFC02E1A7ED969ED231C2358A25A10D94E
  |  ^ expected `depends`
  | 
  = while parsing:
    package line: (validpgpkeys = 4A0C4…)
    └ package property keyword: (validpgpkeys = 4A0C4…)
      → expected `depends`, `optdepends`, `provides`, `conflicts`, `replaces`, `pkgdesc`, `url`, `license`, `arch`, `changelog`, `install`, `groups`, `options`, `backup`
  = note: Matching variant not found
